Fixes Editor's color picker z-index. Fixes #25

--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -219,3 +219,7 @@ Taken from http://stephanwagner.me/only-css-loading-spinner
   overflow:auto;
   padding:20px 5px 10px 5px;
 }
+
+.lines-editor-container {
+  overflow: initial;
+}
